@@ -2,6 +2,7 @@ Revision history for Perl extension Port-Generator
 
 {{$NEXT}}
     - Improved wording of documentation
+    - Added a SEE ALSO section in doc, with reference to Net::EmptyPort
 
 0.1.2 2016-10-06T15:03:50Z
     - fix SYNOPSIS
